--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,19 +7,46 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col size="6" *ngFor="let photo of photoService.photos; index as position">
-        <ion-img [src]="photo.webviewPath"></ion-img>
+      <ion-col
+        size="4"
+        *ngFor="let photo of photoService.photos; let index = index"
+        class="photo-col"
+      >
+        <div class="photo-container">
+          <ion-img [src]="photo.webviewPath"></ion-img>
+          <ion-row class="photo-buttons">
+            <ion-col size="6">
+              <ion-button 
+                expand="block" 
+                size="small" 
+                color="danger" 
+                (click)="deletePhoto(index)" 
+                class="icon-button"
+              >
+                <ion-icon name="trash"></ion-icon>
+              </ion-button>
+            </ion-col>
+            <ion-col size="6">
+              <ion-button 
+                expand="block" 
+                size="small" 
+                color="primary" 
+                (click)="retakePhoto(index)" 
+                class="icon-button"
+              >
+                <ion-icon name="camera"></ion-icon>
+              </ion-button>
+            </ion-col>
+          </ion-row>
+        </div>
       </ion-col>
     </ion-row>
   </ion-grid>
-</ion-content>
-<ion-content>
+
+  <!-- Floating camera button -->
   <ion-fab vertical="bottom" horizontal="center" slot="fixed">
     <ion-fab-button (click)="addPhotoToGallery()">
       <ion-icon name="camera"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 </ion-content>
-
-
-  <!-- ion-fab markup  -->
