--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,24 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      Connexion
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-row class="ion-align-items-center ion-justify-content-center" style="height: 80vh;">
+    <ion-col size="8" class="ion-text-center" *ngIf="!(auth.user$ | async)">
+      <ion-button expand="block" routerLink="/login">
+        <ion-icon slot="start" name="log-in"></ion-icon>
+        Login
+      </ion-button>
+    </ion-col>
+    <ion-col size="8" class="ion-text-center" *ngIf="!(auth.user$ | async)">
+      <ion-button expand="block" routerLink="/signup">
+        <ion-icon slot="start" name="person-add"></ion-icon>
+        Sign Up
+      </ion-button>
+    </ion-col>
+  </ion-row>
 </ion-content>
